--- a/fontpage.html
+++ b/fontpage.html
@@ -429,7 +429,7 @@ main {
                 <li><a href="#">Business</a></li>
                 <li><a href="#">Teach</a></li>
                 <li><a href="#">Cart</a></li>
-                <li><a href="#" class="login-button">Log in</a></li>
+                <li><a href="login.html" class="login-button">Log in</a></li>
                 <li><a href="#" class="signup-button">Sign up</a></li>
                 <li><button class="dark-mode-toggle">Toggle Dark Mode</button></li>
             </ul>
